...

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_save_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageView
                    android:id="@+id/new_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_height"
...

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/new_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_servings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_preparation_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_directions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_nutritional_values"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
