...

    <string name="delete_action">Delete</string>
    <string name="delete_recipe_question">Delete this recipe?</string>
    <string name="recipe_deleted_message">The recipe has been deleted.</string>

    <string name="discard_action">Discard</string>
    <string name="discard_changes_question">Discard changes?</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="source">Source</string>
    <string name="servings">Servings</string>
    <string name="preparation_time">Time</string>
...
    <string name="fat">Fat</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="protein">Protein</string>

    <string name="recipe_photo_accessibility">Recipe photo</string>
    <string name="change_photo">Change photo</string>
    <string name="remove_photo">Remove photo</string>
    <string name="take_photo">Take photo</string>
    <string name="pick_photo">Pick photo</string>
    <string name="image_could_not_be_created_message">The image file could not be created.</string>

    <string name="categories">Categories</string>
    <string name="create_a_category_prompt">Create custom categories to manage your recipes.</string>
    <string name="add_category">Add category</string>
    <string name="add_first_category">Add your first custom category and bring order into your collection!</string>
...
